updates to my squares

--- a/cfbets/squares/templates/squares/squares_base_my_squares.html
+++ b/cfbets/squares/templates/squares/squares_base_my_squares.html
@@ -7,7 +7,42 @@
 <div class="container">
     <h1>My Squares!</h1>
 
-    {% if open_squares %}
+    {% if available_squares %}
+        <div class="container">
+            <div class="panel panel-default panel-success">
+                <!-- Default panel contents -->
+                <div class="panel-heading"><h4>Available Squares</h4></div>
+                <div class="panel-body">
+                    <p>These are open games you should participate in. Go ahead, do it.</p>
+                </div>
+
+                <!-- Table -->
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th>Team A</th>
+                        <th>Team B</th>
+                        <th>PPS</th>
+                        <th>Squares Rem.</th>
+                        <th>Expiration</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        {% for active_game in available_squares %}
+                            <tr class="v-center-square">
+                                <th scope="row"><button class="btn btn-success">Buy</button></th>
+                                <td>{{ active_game.team_a }}</td>
+                                <td>{{ active_game.team_b }}</td>
+                                <td>${{ active_game.price_per_square }}</td>
+                                <td>{{ active_game.remaining_squares }}</td>
+                                <td>{{ active_game.end_date }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     {% else %}
     <div class="container">
 		<div class="alert alert-danger alert-dismissible" role="alert">
@@ -17,95 +52,60 @@
 			<strong>Warning!</strong> There are no open squares games. Blame Brandon.
 		</div>
 	</div>
-
-	<div class="container">
-		<div class="panel panel-default panel-success">
-			<!-- Default panel contents -->
-			<div class="panel-heading"><h4>Available Squares</h4></div>
-			<div class="panel-body">
-				<p>These are open games you should participate in. Go ahead, do it.</p>
-			</div>
-
-			<!-- Table -->
-			<table class="table table-hover">
-				<thead>
-				<tr>
-					<th></th>
-					<th>Team A</th>
-					<th>Team B</th>
-					<th>PPS</th>
-					<th>Squares Rem.</th>
-					<th>Expiration</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr class="v-center-square">
-					<th scope="row"><button class="btn btn-success">Buy</button></th>
-						<td>Clemson</td>
-						<td>Uscjr</td>
-						<td>$1</td>
-						<td>100</td>
-						<td>11/27/2018 19:00</td>
-				</tr>
-				<tr>
-					<th scope="row"><button class="btn btn-success">Buy</button></th>
-						<td>Clemson</td>
-						<td>Uscjr</td>
-						<td>$1</td>
-						<td>100</td>
-						<td>11/27/2018 19:00</td>
-				</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
     {% endif %}
 
     <div class="container">
         <h3>Active Squares</h3>
-        {% if your_open_squares %}
+        {% if my_open_squares or my_active_squares %}
+            <!-- Table -->
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th></th>
+                    <th>Team A</th>
+                    <th>Team B</th>
+                    <th>PPS</th>
+                    <th>Your Total Squares</th>
+                    <th>Expiration</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% if my_open_squares %}
+                        {% for open_game in my_open_squares %}
+                            <tr class="v-center-square">
+                                <th scope="row"></th>
+                                <td>{{ open_game.squares_game__team_a }}</td>
+                                <td>{{ open_game.squares_game__team_b }}</td>
+                                <td>${{ open_game.squares_game__price_per_square }}</td>
+                                <td>{{ open_game.num_squares__sum }}</td>
+                                <td>{{ open_game.squares_game__end_date }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if my_active_squares %}
+                        {% for active_game in my_active_squares %}
+                            <tr class="v-center-square">
+                                <th scope="row"><button class="btn btn-primary">View</button></th>
+                                <td>{{ active_game.squares_game__team_a }}</td>
+                                <td>{{ active_game.squares_game__team_b }}</td>
+                                <td>${{ active_game.squares_game__price_per_square }}</td>
+                                <td>{{ active_game.num_squares__sum }}</td>
+                                <td>{{ active_game.squares_game__end_date }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
+
         {% else %}
             <p>You are not in any squares games. Blame yourself (and then, blame Brandon).</p>
-                <!-- Table -->
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>Team A</th>
-                        <th>Team B</th>
-                        <th>PPS</th>
-                        <th>Your Total Squares</th>
-                        <th>Expiration</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr class="v-center-square">
-                        <th scope="row"><button class="btn btn-primary">View</button></th>
-                            <td>Clemson</td>
-                            <td>Uscjr</td>
-                            <td>$1</td>
-                            <td>10</td>
-                            <td>11/27/2018 19:00</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><button class="btn btn-primary">View</button></th>
-                            <td>Clemson</td>
-                            <td>Uscjr</td>
-                            <td>$1</td>
-                            <td>10</td>
-                            <td>11/27/2018 19:00</td>
-                    </tr>
-                    </tbody>
-                </table>
-
         {% endif %}
     </div>
 
     <div class="container">
         <h3>Closed Squares</h3>
-        {% if your_open_squares %}
-        {% else %}
-            <p>You haven't played in any completed squares games, like, at all.</p>
+        {% if my_closed_squares %}
                 <!-- Table -->
                 <table class="table table-hover">
                     <thead>
@@ -119,24 +119,20 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr class="v-center-square">
-                        <th scope="row"><button class="btn btn-primary">View</button></th>
-                            <td>Clemson</td>
-                            <td>Uscjr</td>
-                            <td>$1</td>
-                            <td>10</td>
-                            <td>Yes</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><button class="btn btn-primary">View</button></th>
-                            <td>Clemson</td>
-                            <td>Uscjr</td>
-                            <td>$1</td>
-                            <td>10</td>
-                            <td>No</td>
-                    </tr>
+                        {% for closed_game in my_closed_squares %}
+                        <tr class="v-center-square">
+                            <th scope="row"><button class="btn btn-primary">View</button></th>
+                                <td>{{ closed_game.squares_game__team_a }}</td>
+                                <td>{{ closed_game.squares_game__team_b }}</td>
+                                <td>${{ closed_game.squares_game__price_per_square }}</td>
+                                <td>{{ closed_game.num_squares__sum }}</td>
+                                <td></td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
+        {% else %}
+            <p>You haven't played in any completed squares games, like, at all.</p>
         {% endif %}
     </div>
 
