--- a/cfbets/squares/templates/squares/squares_base_my_squares.html
+++ b/cfbets/squares/templates/squares/squares_base_my_squares.html
@@ -55,8 +55,10 @@
     {% endif %}
 
     <div class="container">
-        <h3>Active Squares</h3>
+        <h3>Open and Active Squares</h3>
         {% if my_open_squares or my_active_squares %}
+        <p>Open squares are games you have bought in to but have not started
+        yet. You can't view them because squares have not yet been assigned. Active squares are...well, you know.</p>
             <!-- Table -->
             <table class="table table-hover">
                 <thead>
